--- a/2022.09.05/styles.css
+++ b/2022.09.05/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    background-color: rgb(253, 251, 251);
+    background-color: #f8fafc;
     font-family: 'Roboto', sans-serif;
 }
 header {
@@ -50,13 +50,14 @@ form {
     border-radius: 5px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.103), -5px 5px 5px rgba(37, 37, 37, 0.096);
 }
-input {
+.task-input {
     width: 65%;
     height: 25px;
     border-radius: 5px;
     font-size: 16px;
     border-color: rgba(128, 128, 128, 0.103);
     padding-left: 10px;
+    margin-left: 10px;
 }
 button {
     width: 20%;
@@ -123,18 +124,59 @@ h2 {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.541), -5px 5px 5px rgba(37, 37, 37, 0.096);
 }
 .edit-form {
-    text-align: left;
     padding: 50px;
     width: 60%;
+    height: 250px;
 }
-h1 {
+h4 {
     text-align: center;
     margin-bottom: 50px;
+    font-size: 25px;
+    letter-spacing: 1px;
 }
-.edit-form input {
+.id input {
+    margin-left: 100px;
+    width: 300px;
+    height: 30px;
+    border: none;
+    font-size: 16px;
+} 
+.edit-name input {
+    margin-left: 110px;
+    width: 300px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: rgba(182, 181, 181, 0.089);
+    border: none;
+    padding-left: 7px;
+    font-size: 16px;
     
 }
-label {
-    width: 200px;
-    display: inline;
+.compl input {
+    margin-left: 80px;
+    width: 300px;
+    height: 15px;
 }
+.edit-form div {
+    padding:  5px;
+}
+.edit-btn {
+    width: 95%;
+    font-size: 16px;
+    margin-top: 15px;
+}
+.edit-form small {
+    text-align: center;
+    color: rgb(192, 18, 18);
+    margin-top: 10px;
+}
+.return-btn {
+    margin-top: 100px;
+}
+.return-btn button {
+    width: 30%;
+    height: 40px;
+    background-color: black;
+    font-size: 18px;
+}
+
