--- a/2022.09.05/styles.css
+++ b/2022.09.05/styles.css
@@ -128,6 +128,7 @@ h2 {
     padding: 50px;
     width: 550px;
     height: 250px;
+    text-align: left;
 }
 h4 {
     text-align: center;
@@ -176,6 +177,7 @@ h4 {
     font-size: 12px;
     margin-top: 20px;
     color: rgb(180, 16, 16);
+    text-align: center;
 }
 .edit-form small {
     text-align: center;
