--- a/2022.09.14/hiking.css
+++ b/2022.09.14/hiking.css
@@ -4,9 +4,11 @@
 }
 :root {
     --blue-color: #645CFF;
+    --white-color-1: #F8FBFC;
 }
 header {
     display: flex;
+    justify-content: center;
     width: 100%;
     height: 70px;
     justify-content: space-around;
@@ -20,9 +22,11 @@ nav, .logo-text, .social-link {
     display: flex;
     align-items: center;
 }
-nav > a {
-    padding-right: 15px;
-    color: black;
+.header-nav{
+    justify-content: center;
+}
+.header-nav > a {
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-weight: bolder;
     display: none;
@@ -30,6 +34,7 @@ nav > a {
 .social-link > a {
     padding-left: 15px;
 }
+
 .logo-text > p {
     font-size: 18px;
     font-weight: bold;
@@ -97,6 +102,7 @@ h3, .text-section > p {
     padding-bottom: 15px;
 }
 a {
+    color: var(--blue-color);
     text-decoration: none;
 }
 .services-container {
@@ -104,7 +110,7 @@ a {
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
-    background: #F8FBFC;
+    background: var(--white-color-1);
     padding-top: 30px;
 }
 .top-services {
@@ -141,22 +147,40 @@ h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.199);
     padding-bottom: 20px;
 }
-.tibet-section {
+
+.tours {
     margin-top: 40px;
     width: 400px;
     height: 300px;
-    background-image: url(img/tours.jpg);
     background-repeat: no-repeat;
+    background-size: 100%;
     padding-top: 5px;
+}
+.tibet-section {
+    background-image: url(img/tours.jpg);
+    background-size: cover;
+}
+.java-section {
+    background-image: url(img/indonesia.jfif);
+    background-size: cover;
+}
+.kong-section {
+    background-image: url(img/hong\ kong.jpg);
+    background-size: cover;
+}
+.kenya-section {
+    background-image: url(img/kenya.jfif);
+    background-size: cover;
 }
 .price-section {
     display: flex;
     width: 400px;
     height: 100px;
     justify-content: space-between;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.199);
+    padding-bottom: 15px;
 }
 .price-left {
     padding: 20px 0 10px 0; 
@@ -172,11 +196,11 @@ h4 {
 }
 .price-left p {
     padding-left: 15px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
 }
-.tibet-section p {
-    width: 100px;
+.tours p {
+    width: 110px;
     margin-top: 20px;
     padding: 5px;
     background: var(--blue-color);
@@ -184,4 +208,221 @@ h4 {
 }
 .price-left a {
     padding-left: 15px;
+    font-size: 13px;
+    font-weight: bold;
+}
+.tour-spacing {
+    margin-top: 40px;
+}
+.tours-container {
+    margin-top: 50px;
+}
+.tours-container > a {
+    margin-top: 50px;
+    font-weight: bold;
+    font-size: 13px;
+}
+.gallery-img > img {
+    width: 100%;
+    height: 300px;
+}
+.gallery-img {
+    width: 100%;
+    background-color: var(--blue-color);
+}
+.gallery-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    background: var(--white-color-1);
+}
+.gallery-form {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    background: var(--blue-color);
+}
+.form-text {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    color: white;
+}
+form {
+    display: flex;
+    align-items: center;
+    width: 60%;
+}
+.form-text h5 {
+    font-size: 25px;
+    letter-spacing: 2px;
+    line-height: 35px;
+    text-align: center;
+}
+input {
+    width: 70%;
+    height: 30px;
+    border: none;
+    padding-left: 5px;
+}
+form button {
+    width: 25%;
+    height: 30px;
+    background: rgb(218, 214, 214);
+    border: 1px solid white;
+    color: black;
+    box-shadow: none;
+}
+footer {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    background: black;
+    color: white;
+}
+.footer-content {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+}
+.footer-nav > a {
+    color: white;
+    padding-left: 20px;
+}
+@media screen and (min-width: 471px) {
+    header {
+        height: 100px;
+    }
+    .header-nav a {
+        padding-left: 50px;
+        display: contents;
+    }
+    .explore {
+        background-color: #645de9;
+        position: relative;
+    }
+    .explore::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0.5;
+        background-image: url(img/exploring.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    h1 {
+        font-size: 60px;
+        position: relative;
+    }
+    .explore-content > p {
+        font-size: 15px;
+        position: relative;
+    }
+    .explore-content button {
+        position: relative;
+        width: 100px;
+        height: 30px;
+    }
+    button:hover {
+        box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.212);
+        width: 110px;
+        height: 35px;
+    }
+    a:hover {
+        text-decoration: underline;
+        color: var(--blue-color);
+    }
+    .about-container {
+        flex-direction: row;
+
+    }
+    .text-section {
+        width: 35%;
+    }
+    .img-section > img {
+        box-shadow: -15px -15px #645CFF;
+    }
+    h2 {
+        font-size: 35px;
+    }
+    .services {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 70%;
+    }
+    .services-temp {
+        text-align: left;
+        align-items:flex-start;
+        display: grid;
+        width: 250px;
+        height: 100px;
+        grid-template-columns: 1fr 2fr;
+    }
+    .services-temp > p {
+        grid-row: 2;
+        grid-column: 2;
+    }
+    .services-temp > img {
+        width: 45px;
+        margin-top: 20px;
+    }
+    .top-services {
+        width: 70%;
+        justify-content: space-around;
+    }
+    h4 {
+        padding-top: 20px;
+    }
+    .tours-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+       grid-column-gap: 20px;
+    }
+    .gallery-img {
+        display: flex;
+        width: 100%;
+    }
+    footer {
+        height: 300px;
+    }
+    .form-text {
+        width: 80%;
+        height: 200px;
+        justify-content: space-around;
+    }
+    .form-text > h5 {
+        letter-spacing: 5px;
+        font-size: 50px;
+        line-height: 50px;
+    }
+    .form-text > p {
+        text-align: left;
+        font-size: 20px;
+    }
+    input {
+        width: 50%;
+        height: 40px;
+    }
+    form button {
+        height: 40px;
+    }
+    .services-container {
+        height: 300px;
+    }
 }
