--- a/2022.09.14/hiking.css
+++ b/2022.09.14/hiking.css
@@ -174,6 +174,14 @@ h4 {
     background-image: url(img/kenya.jfif);
     background-size: cover;
 }
+.price-left > a::before {
+    content: "\f279";
+    font-style: normal;
+    text-rendering: auto;
+    font-variant: normal;
+    font-family: "Font Awesome 5 Free";
+    padding-right: 5px;
+}
 .price-section {
     display: flex;
     width: 400px;
@@ -305,8 +313,8 @@ footer {
         height: 100px;
     }
     .header-nav a {
-        padding-left: 50px;
-        display: contents;
+        padding-left: 20px;
+        display: flex;
     }
     .explore {
         background-color: #645de9;
